...
    }

    val currencyItems by mainViewModel.getCurrencies().observeAsState()

    val exchangeRates by mainViewModel.getExchangeRates().observeAsState()

    LazyVerticalStaggeredGrid(columns = StaggeredGridCells.Fixed(GRID_SPAN)) {
        item(span = StaggeredGridItemSpan.FullLine) {
            AmountTextField(
                onValueChange = {
                    amountValue = it
                    if (mainViewModel.getSelectedCurrency() != null && amountValue.isNotBlank()) {
                        mainViewModel.getConversions(amountValue.toDouble())
...
